// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with complex children 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        null,
        Object {
          "height": 100,
        },
      ]
    }
  >
    <View>
      <Text>
        Complex children
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button renders correctly with complex children and disabled 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "opacity": 0.4,
        },
        Object {
          "height": 100,
        },
      ]
    }
  >
    <View>
      <Text>
        Complex children
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button renders correctly with text 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 100,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "textAlign": "center",
        },
        Object {
          "color": "#000",
        },
        null,
        null,
      ]
    }
  >
    Button text
  </Text>
</View>
`;

exports[`Button renders correctly with text and disabled 1`] = `
<View
  accessible={true}
  focusable={false}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "height": 100,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "textAlign": "center",
        },
        Object {
          "color": "#000",
        },
        Object {
          "opacity": 0.4,
        },
        null,
      ]
    }
  >
    Button text
  </Text>
</View>
`;
